hero canvas progress

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,16 +10,31 @@
 }
 
 header {
+  /* background: rgb(255, 255, 255, 0.2); */
+  /* background-image: linear-gradient(rgba(101, 170, 255, 1), rgba(0, 0, 0, 0)); */
+  /* mask-image: linear-gradient(to right,
+      white 30%,
+      transparent); */
+  backdrop-filter: blur(5px);
+  transition: background-color .8s ease;
   position: fixed;
   margin-inline: auto;
   top: 0;
-  background: rgb(255, 255, 255, 0.8);
-  /* filter: blur(8px); */
 }
 
 .darkMode header {
-  background: rgb(23, 23, 23, 0.8);
+  /* background-image: linear-gradient(rgba(20, 21, 22, 1), rgba(0, 0, 0, 0)); */
+  /* background: rgb(23, 23, 23, 0.2); */
 }
+
+/* #hero {
+  transition: background-color .8s ease;
+  background: #A0DAE2;
+}
+
+.darkMode #hero {
+  background: #050531;
+} */
 
 /* @theme inline {
   --color-background: var(--background);
@@ -36,13 +51,14 @@ header {
 } */
 
 body {
-  background: var(--light);
+  background-color: var(--light);
+  transition: background-color .8s ease;
   color: var(--dark);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: Arial, Helvetica, sans-serif; */
 }
 
 body.darkMode {
-  background: var(--dark);
+  background-color: var(--dark);
   color: var(--light);
 }
 
@@ -54,6 +70,7 @@ body.darkMode {
   from {
     transform: translate(0px, 0px);
   }
+
   to {
     transform: translate(10px, 10px);
   }
@@ -63,9 +80,11 @@ body.darkMode {
   0% {
     scale: 0.42;
   }
+
   50% {
     scale: 1.2;
   }
+
   100% {
     scale: 1;
   }
@@ -75,9 +94,11 @@ body.darkMode {
   0% {
     scale: 0.8;
   }
+
   50% {
     scale: 1.1;
   }
+
   100% {
     scale: 1;
   }
