--- a/app/globals.css
+++ b/app/globals.css
@@ -16,7 +16,7 @@ header {
       white 30%,
       transparent); */
   backdrop-filter: blur(5px);
-  transition: background-color .8s ease;
+  transition: background-color 0.8s ease;
   position: fixed;
   margin-inline: auto;
   top: 0;
@@ -52,7 +52,7 @@ header {
 
 body {
   background-color: var(--light);
-  transition: background-color .8s ease;
+  transition: background-color 0.8s ease;
   color: var(--dark);
   /* font-family: Arial, Helvetica, sans-serif; */
 }
