--- a/app/globals.css
+++ b/app/globals.css
@@ -22,6 +22,13 @@ header {
   top: 0;
 }
 
+h1 {
+  text-align: center;
+  width: 900px;
+  font-size: 30px;
+  transform: translateY(-150px);
+}
+
 .darkMode header {
   /* background-image: linear-gradient(rgba(20, 21, 22, 1), rgba(0, 0, 0, 0)); */
   /* background: rgb(23, 23, 23, 0.2); */
